# engineers-nightmare

./: .gitignore  .gitmodules  .travis.yml  AUTHORS  CMakeLists.txt  LICENSE.md  README.md  TODO  TODO.md  client.vcxproj  client.vcxproj.filters  common.h  main.cc  nightmare.sln  nightmare.sln.DotSettings  nightmare.vcxproj  nightmare.vcxproj.filters  server.cc  server.vcxproj  server.vcxproj.filters  test-client.cc  test-client.vcxproj  test-client.vcxproj.filters
assets/: default.manifest
configs/: input.cfg  keys.cfg
configs/base/: audio.cfg  input.cfg  keys.cfg  video.cfg
configs/user/: readme.txt
doc/: ship-space.md
entities/: alarm_light.ent  builder_bot.ent  display.ent  display2.ent  door-kit.ent  door.ent  frobnicator.ent  knob.ent  light.cmp  light.ent  o2-generator.ent  plaidnicator.ent  power-generator.ent  power_sensor.ent  pressure_sensor.ent  pressure_sensor_1.ent  pressure_sensor_2.ent  proximity_sensor.ent  sensor_comparator.ent  switch.ent  warning_light.ent
mesh/: attach.dae  crate-2.mtl  display.mtl  frobnicator.dae  glass_xm.mtl  glass_xp.mtl  glass_ym.mtl  glass_yp.mtl  glass_zm.mtl  glass_zp.mtl  grate_xm.mtl  grate_xp.mtl  grate_ym.mtl  grate_yp.mtl  grate_zm.mtl  grate_zp.mtl  initial_scaffold.dae  initial_scaffold.mtl  mv-frame.mtl  no_place.dae  panel_1x1.dae  panel_4x4.dae  placement_overlay.dae  single_door.dae  single_door_frame.dae  sphere.dae  warning_light.dae  wire.dae  x_quad.dae  x_quad.mtl  x_quad_p.dae  y_quad.dae  y_quad.mtl  y_quad_p.dae  z_quad.dae  z_quad.mtl  z_quad_p.dae
save/: readme.txt
shaders/: add_overlay.vert  bluefill.frag  bluefill.vert  blueprint.frag  blueprint.vert  chunk.frag  chunk.vert  debug.frag  debug.vert  highlight.frag  highlight.vert  layered.vert  overlay.frag  overlay.vert  particle.frag  particle.vert  remove_overlay.vert  render.vert  simple.frag  simple.vert  simple_instanced.vert  simple_modelspace_uv.vert  sky.frag  sky.vert  ui.frag  ui.vert  ui_sprites.frag  ui_sprites.vert  unlit.frag
shot/: readme.txt
src/: asset_manager.cc  asset_manager.h  atlas.cc  blob.cc  blob.h  block.h  bullet_debug_draw.h  char.cc  char.h  chunk.cc  chunk.h  common.h  config.cc  config.h  dynamic_grid.h  entity.cc  entity.h  entity_utils.cc  entity_utils.h  fixed_cube.h  fixed_grid.h  game_state.cc  game_state.h  grid.h  imgui_impl_sdl_gl3.cc  imgui_impl_sdl_gl3.h  input.cc  input.h  libconfig_shim.h  light_field.cc  light_field.h  load.cc  load.h  memory.h  mesh.cc  mesh.h  mesher.cc  mock_ship_junk.cc  network.cc  network.h  (+43 more)
src/component/: builder_component.cc  builder_component.h  c_entity.h  component.cc  component.h  component_manager.cc  component_manager.h  component_managers.h  component_system_manager.cc  component_system_manager.h  component_ui_genned.cc  convert_on_pop_component.cc  convert_on_pop_component.h  display_component.cc  display_component.h  door_component.cc  door_component.h  door_slider_component.cc  door_slider_component.h  gas_producer_component.cc  gas_producer_component.h  gas_production_component.cc  gas_production_component.h  light_component.cc  light_component.h  parent_component.cc  parent_component.h  physics_component.cc  physics_component.h  placeable_component.cc  placeable_component.h  position_component.cc  position_component.h  power_component.cc  power_component.h  power_provider_component.cc  power_provider_component.h  power_sensor_component.cc  power_sensor_component.h  pressure_sensor_component.cc  (+32 more)
src/enums/: enums.cc  enums.h
src/game_state/: customize_entity_comms_filter_state.cc  customize_entity_comms_inspection_state.cc  customize_entity_comms_output_state.cc  customize_entity_state.cc  customize_entity_state.h  menu_state.cc  menu_state.h  play_state.cc  play_state.h
src/projectile/: projectile.cc  projectile.h
src/tools/: add_block.cc  add_entity.cc  add_room.cc  add_shaped_block.cc  add_surface.cc  customize_entity.cc  cut_wall.cc  fire_projectile.cc  paint_surface.cc  remove_block.cc  remove_entity.cc  remove_surface.cc  remove_surface_entity.cc  tether.cc  tools.h  wiring.cc
src/utils/: debugdraw.h  debugdraw_gl.cc  tinypng.h
src/wiring/: wiring-data.cc  wiring.cc  wiring.h  wiring_data.cc  wiring_data.h
t/: chunk_test.cc  dynamic_grid_test.cc  fixed_cube_test.cc  fixed_grid_test.cc  grid_test.cc  serialize_test.cc  ship_space_test.cc  space_test.cc
voxsrc/: alarm_light.vox  concept-1.vox  concept-2.vox  concept-3.vox  concept-4.vox  crate-1.vox  crate-2.vox  customize.vox  display.vox  display_panel.vox  door-leftside.vox  door-rightside.vox  doorframe_2x2.vox  face_marker.vox  frame-corner.vox  frame-double-invcorner-again.vox  frame-double-invcorner.vox  frame-half.vox  frame-invcorner.vox  frame-quad-cut.vox  frame-sloped.vox  frame.vox  glass_xm.vox  glass_xp.vox  glass_ym.vox  glass_yp.vox  glass_zm.vox  glass_zp.vox  grate_xm.vox  grate_xp.vox  grate_ym.vox  grate_yp.vox  grate_zm.vox  grate_zp.vox  knob.vox  o2-gen.vox  power_gen.vox  right-tri-wall.vox  rope_segment.vox  side_xm.vox  (+22 more)
